# openraw

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  audit.toml  docker-compose.yml  install.ps1  install.sh  openraw.toml.example
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/writer/: agent.toml
crates/openraw-api/: Cargo.toml
crates/openraw-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/openraw-api/static/: index_body.html  index_head.html
crates/openraw-api/static/css/: components.css  layout.css  theme.css
crates/openraw-api/static/js/: api.js  app.js
crates/openraw-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/openraw-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/openraw-channels/: Cargo.toml
crates/openraw-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discord.rs  discourse.rs  email.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  twitch.rs  types.rs  viber.rs  (+4 more)
crates/openraw-channels/tests/: bridge_integration_test.rs
crates/openraw-cli/: Cargo.toml
crates/openraw-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/openraw-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/openraw-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  comms.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/openraw-desktop/: Cargo.toml  tauri.conf.json
crates/openraw-desktop/capabilities/: default.json
crates/openraw-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  (+1 more)
crates/openraw-extensions/: Cargo.toml
crates/openraw-hands/: Cargo.toml
crates/openraw-hands/bundled/browser/: SKILL.md
crates/openraw-hands/bundled/twitter/: HAND.toml
crates/openraw-hands/src/: lib.rs  registry.rs
crates/openraw-kernel/: Cargo.toml
crates/openraw-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/openraw-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/openraw-memory/: Cargo.toml
crates/openraw-migrate/: Cargo.toml
crates/openraw-runtime/: Cargo.toml
crates/openraw-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/openraw-runtime/src/drivers/: anthropic.rs  claude_code.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/openraw-skills/: Cargo.toml
crates/openraw-types/: Cargo.toml
crates/openraw-wire/: Cargo.toml
deploy/: openraw.service
docs/: README.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  desktop.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  production-checklist.md  providers.md  security.md  skill-development.md  troubleshooting.md  workflows.md
scripts/: build-and-test.ps1  install.ps1  install.sh
scripts/docker/: install-smoke.Dockerfile
sdk/javascript/: index.d.ts  index.js  package.json
sdk/python/: openraw_client.py  openraw_sdk.py  setup.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+50 files in other folders)
