[package]
name = "openraw-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the OpenRaw Agent OS daemon"

[dependencies]
openraw-types = { path = "../openraw-types" }
openraw-kernel = { path = "../openraw-kernel" }
openraw-runtime = { path = "../openraw-runtime" }
openraw-memory = { path = "../openraw-memory" }
openraw-channels = { path = "../openraw-channels" }
openraw-wire = { path = "../openraw-wire" }
openraw-skills = { path = "../openraw-skills" }
openraw-hands = { path = "../openraw-hands" }
openraw-extensions = { path = "../openraw-extensions" }
openraw-migrate = { path = "../openraw-migrate" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
