[package]
name = "openraw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the OpenRaw Agent OS"

[[bin]]
name = "openraw"
path = "src/main.rs"

[dependencies]
openraw-types = { path = "../openraw-types" }
openraw-kernel = { path = "../openraw-kernel" }
openraw-api = { path = "../openraw-api" }
openraw-migrate = { path = "../openraw-migrate" }
openraw-skills = { path = "../openraw-skills" }
openraw-extensions = { path = "../openraw-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
openraw-runtime = { path = "../openraw-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
