[package]
name = "openraw-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for OpenRaw — curated autonomous capability packages"

[dependencies]
openraw-types = { path = "../openraw-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
