[package]
name = "openraw-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenRaw Agent OS"

[dependencies]
openraw-types = { path = "../openraw-types" }
openraw-memory = { path = "../openraw-memory" }
openraw-runtime = { path = "../openraw-runtime" }
openraw-skills = { path = "../openraw-skills" }
openraw-hands = { path = "../openraw-hands" }
openraw-extensions = { path = "../openraw-extensions" }
openraw-wire = { path = "../openraw-wire" }
openraw-channels = { path = "../openraw-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
